syntax = "proto3";
import "BasicTypes.proto";
import "DtoTypes.proto";

option csharp_namespace = "ManufacturerService";

package Manufacturers;

service Manufacturers {
	rpc LoadManufacturers(NoParams) returns (ListOfManufacturers);
	rpc GetManufacturerComment (LongRequest) returns (StringResponse);
	rpc GetManufacturerModelLinks(LongRequest) returns (ListOfModelLink);
	rpc InsertManufacturerWithHistory(InsertManufacturerWithHistoryRequest) returns (ListOfManufacturers);
	rpc UpdateManufacturerWithHistory(UpdateManufacturerWithHistoryRequest) returns (ListOfManufacturers);
}

message ListOfManufacturers {
	repeated Manufacturer manufacturers = 1;
} 

message ListOfManufacturerDiffs {
	repeated ManufacturerDiff manufacturerDiff = 1;
} 

message InsertManufacturerWithHistoryRequest {
	ListOfManufacturerDiffs manufacturerDiffs = 1;
	bool returnList = 2;
}

message UpdateManufacturerWithHistoryRequest {
	ListOfManufacturerDiffs manufacturerDiffs = 1;
}